fix print scrollbar

--- a/src/styles/ic-map.css
+++ b/src/styles/ic-map.css
@@ -227,7 +227,11 @@ ic-map ic-map-consent-reminder > * {
 	align-items: 			center;
 	justify-content:		center;
 	font-size: 				1rem;
-	margin: 				0 0.25rem;
+	margin: 				0 0.25rem;	
+}
+
+ic-map ic-map-consent-reminder > * > *{
+	text-align: 			center;
 }
 
 ic-map .spinner-pane {
